# nonebot_plugin_bh3_elysian_realm

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: Ruff.yml  codecov.yml
nonebot_plugin_bh3_elysian_realm/: __init__.py  cache_image_resources.py  config.py  nickname_parser.py  resources.py  utils.py
nonebot_plugin_bh3_elysian_realm/plugins/: __init__.py  cache_image_resources.py
nonebot_plugin_bh3_elysian_realm/resources/: nickname.json
nonebot_plugin_bh3_elysian_realm/utils/: __init__.py  file_utils.py  git_utils.py  weibo_spider.py
tests/: conftest.py  test_echo.py  test_matcher.py
tests/test_plugin_message_resp/: test_matcher.py
tests/test_utils/: conftest.py  test_file_utils.py  test_git_utils.py
