[project]
name = "nonebot_plugin_bh3_elysian_realm"
version = "0.1.0"
description = "BH3 Elysian Realm bot power by NoneBot2"
authors = [
    {name = "BalconyJH", email = "balconyjh@gmail.com"},
]
dependencies = [
    "nb-cli>=1.2.5",
    "setuptools>=68.2.2",
    "nonebot-adapter-onebot>=2.3.1",
    "nonebot-adapter-satori>=0.6.2",
    "uvicorn[standard]>=0.23.2",
    "fastapi>=0.104.0",
    "nonebot2>=2.1.1",
    "nonebot-plugin-send-anything-anywhere>=0.3.2",
    "tqdm>=4.66.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "AGPL-3.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.nonebot]
adapters = [
    { name = "OneBot V12", module_name = "nonebot.adapters.onebot.v12" },
    { name = "Satori", module_name = "nonebot.adapters.satori" }
]
plugins = []
plugin_dirs = ["nonebot_plugin_bh3_elysian_realm/plugins"]
builtin_plugins = []